Fix album track list overflow.

--- a/source/stylesheets/app.css.sass
+++ b/source/stylesheets/app.css.sass
@@ -314,7 +314,7 @@ ul.albums
       height: 500px
       z-index: 10
       transition: all $flip-time / 2
-      overflow: hidden
+      overflow: auto
       padding: 10px 10px 0
       display: -webkit-flex
       -webkit-flex-direction: column
@@ -343,7 +343,6 @@ ul.albums
 ul.tracks.track-list
   padding: 10px 0
   background: none
-  overflow: auto
   width: 100%
   position: relative
   > .track
